fixed button bug, added z-index to navbar, fixed text ordering

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,8 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 1;
+  background-color: #0F0F18;
+  z-index: 2;
 }
 
 .top-nav-right {
